<resources>
    <string name="app_name">Cloud List</string>
    <string name="sign_out">Sign out</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="use_local_account">Use local account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="channel_name">Channel name</string>
    <string name="channel_key">Channel key</string>
    <string name="channel_connect">Connect</string>
    <string name="channel_create">Create channel</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="connect_to_last_channel">Connect: %1$s</string>
    <string name="channel_disconnect">Disconnect</string>
    <string name="cart_price">%1$s €</string>
    <string name="cart_price_text">Cart total: %1$s €</string>
    <string name="add_new_item">Add new item</string>
    <string name="item_name">Name</string>
    <string name="item_price">Price</string>
    <string name="add">Add</string>
    <string name="empty_item_name">Empty item name</string>
    <string name="item_already_exists">Item already exists</string>
    <string name="dialog_yes">Delete</string>
    <string name="dialog_no">Cancel</string>
    <string name="dialog_question_cart">Do you want to delete this cart?</string>
    <string name="dialog_question_item">Do you want to delete %1$s?</string>
    <string name="any_exception">An exception has occurred</string>
    <string name="channel_not_found">Channel not found</string>
    <string name="invalid_email_or_pw">Invalid user email or password</string>
    <string name="user_created_ok">User created successfully</string>
    <string name="message_sent_email_ok">Message sent to %1$s</string>
</resources>